--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ h2 {
     margin-right: 510px;
     font-weight: 700;
     letter-spacing: 1px;
-    margin-left: 1px;
+    margin-left: 50vw;
 }
 
 
