--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
     background-image: url(https://www.designi.com.br/images/preview/10097608.jpg);
 }
+
 main {
 
     background: white;
@@ -19,13 +20,13 @@ main {
     left: 28%;
     padding: 20px;
     border-radius: 30px;
-    
+
 }
 
 h1 {
 
     text-align: center;
-    font-size: 60px;
+    font-size: 55px;
     font-weight: 700;
     text-transform: capitalize;
     color: black;
@@ -33,17 +34,19 @@ h1 {
     letter-spacing: 3px;
 
 }
-h2 {
+
+#number{
 
     color: black;
     position: relative;
-    left: 150px;
+    margin-left: 10vw;
     margin-top: 25px;
     font-size: 35px;
     margin-bottom: 30px;
     letter-spacing: 1px;
 
 }
+
 div {
 
     display: flex;
@@ -52,6 +55,7 @@ div {
     justify-content: center;
     gap: 30px;
 }
+
 button {
 
     border-radius: 20px;
@@ -77,15 +81,7 @@ button:active {
 
     opacity: 0.6;
 }
-
-
-
-
-
-
-
-@media screen and (max-width:798px) {
-    
+@media screen and (max-width:768px){
 
     main {
 
@@ -98,35 +94,28 @@ button:active {
         gap: 20px;
     }
 
-div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 25px;
-}
+    div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 25px;
+    }
 
-h1 {
-    font-size: 25px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    margin-top: 10px;
-    text-align: center;
-}
-}
+    h1 {
+        font-size: 25px;
+        font-weight: 700;
+        letter-spacing: 1px;
+        margin-top: 10px;
+        text-align: center;
+    }
 
-h2 {
+
+#number {
     margin-right: 510px;
     font-weight: 700;
     letter-spacing: 1px;
-    margin-left: 50vw;
+    margin-left: 120vw;
 }
 
-
-
-
-
-
-   
-
-
+}
